// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is desktop 1`] = `
<header
  className="sc-bdVaJa fdglVW"
  format="desktop"
>
  Wrapper
</header>
`;

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is mobile 1`] = `
<header
  className="sc-bdVaJa igEspH"
  format="mobile"
>
  Wrapper
</header>
`;

exports[`components:layout:Header:Wrapper renders the Header and CSS properties properly when format is tablet 1`] = `
<header
  className="sc-bdVaJa eUONDV"
  format="tablet"
>
  Wrapper
</header>
`;
